--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="hero-text">
       <h1>Desafie sua mente com nosso quiz de matemática!</h1>
       <p>Descubra o quanto você esta preparado para o enem.</p>
-      <a href="quiz.html" class="btn-start">INICIAR</a>
+      <a href="https://luis2455.github.io/quiz-matematica/" class="btn-start">INICIAR</a>
     </div>
     <div class="hero-image">
       <img src="computador.png" alt="Imagem de computador" />
